[gd_scene load_steps=8 format=3 uid="uid://5cdq3qxlhjp8"]

[ext_resource type="Script" path="res://custom.gd" id="1_v5xwa"]
[ext_resource type="Texture2D" uid="uid://cq8drt7ypvb8l" path="res://sprites/gutbackground.PNG" id="2_x00v3"]
[ext_resource type="FontFile" uid="uid://2g7nibblpvpr" path="res://font/joystix monospace.otf" id="3_kpww4"]
[ext_resource type="PackedScene" uid="uid://bgqlonx2reo62" path="res://assets/bacteria.tscn" id="4_niiuk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sposr"]
bg_color = Color(0.733333, 0.552941, 0.490196, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wret4"]
bg_color = Color(1, 1, 1, 0.811765)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2h1ic"]
bg_color = Color(0.792157, 0.392157, 0.376471, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="build" type="Node"]
script = ExtResource("1_v5xwa")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.2, 0.117647, 0.588235, 1)
self_modulate = Color(0.756863, 0.917647, 1, 1)
position = Vector2(577.25, 322.25)
scale = Vector2(1.81596, 1.81728)
texture = ExtResource("2_x00v3")

[node name="exit" type="Button" parent="."]
offset_left = 1060.0
offset_top = 21.0
offset_right = 1112.0
offset_bottom = 67.0
theme_override_fonts/font = ExtResource("3_kpww4")
theme_override_styles/normal = SubResource("StyleBoxFlat_sposr")
text = "exit
"

[node name="explications" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -189.0
offset_top = 35.0
offset_right = 190.0
offset_bottom = 62.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_kpww4")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_wret4")
text = "pass on a object"
horizontal_alignment = 1

[node name="bacteria" parent="." instance=ExtResource("4_niiuk")]
position = Vector2(614, 323)
scale = Vector2(0.5, 0.5)

[node name="Container2" type="VBoxContainer" parent="."]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -332.0
offset_top = -70.0
offset_bottom = 70.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/separation = 20

[node name="48C" type="Button" parent="Container2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_kpww4")
theme_override_styles/normal = SubResource("StyleBoxFlat_2h1ic")
text = "48C
"

[node name="Container" type="VBoxContainer" parent="."]
offset_top = 83.0
offset_right = 332.0
offset_bottom = 239.0
theme_override_constants/separation = 20

[node name="green" type="Button" parent="Container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_kpww4")
theme_override_styles/normal = SubResource("StyleBoxFlat_2h1ic")
text = "normal
"

[node name="red" type="Button" parent="Container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_kpww4")
theme_override_styles/normal = SubResource("StyleBoxFlat_2h1ic")
text = "red"

[node name="blue" type="Button" parent="Container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_kpww4")
theme_override_styles/normal = SubResource("StyleBoxFlat_2h1ic")
text = "green"

[node name="yellow" type="Button" parent="Container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_kpww4")
theme_override_styles/normal = SubResource("StyleBoxFlat_2h1ic")
text = "yellow"

[connection signal="button_down" from="exit" to="." method="_on_exit_button_down"]
[connection signal="pressed" from="Container2/48C" to="." method="_on_c_pressed"]
[connection signal="pressed" from="Container/green" to="." method="_on_green_pressed"]
[connection signal="pressed" from="Container/red" to="." method="_on_red_pressed"]
[connection signal="pressed" from="Container/blue" to="." method="_on_blue_pressed"]
[connection signal="pressed" from="Container/yellow" to="." method="_on_yellow_pressed"]
